# inotify3

./: .gitignore  Cargo.toml  README.md  build.sh  index.js  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: CI.yml
__test__/: index.spec.mjs
scripts/: artifacts.sh
src/: index.ts  lib.rs
